[metadata]
name = coincurve
version = 19.0.0
authors = Ofek Lev
author_email=oss@ofek.dev
description = Cross-platform Python CFFI bindings for libsecp256k1
long_description = file: README.md, LICENSE-MIT, LICENSE-APACHE
url = https://ofek.dev/coincurve
project_urls =
    Documentation = https://ofek.dev/coincurve
    Issues = https://github.com/ofek/coincurve/issues
license_files =
    LICENSE-MIT
    LICENSE-APACHE
license = MIT OR Apache-2.0
platforms = any
keywords =
    secp256k1
    crypto
    elliptic curves
    bitcoin
    ethereum
    cryptocurrency
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Security :: Cryptography

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    asn1crypto
    cffi
zip_safe = False

[options.packages.find]
exclude =
    _cffi_build
    _cffi_build.*
    libsecp256k1
    tests
